# Proyecto-API

./: Cargo.toml
src/: main.rs
src/config/: config.rs
src/controller/: asignaciones_controller.rs  clientes_corp_controller.rs  desarrolladores_controller.rs  mod.rs  proyectos_controller.rs  tareas_controller.rs
src/models/: asignaciones.rs  clientes_corp.rs  desarrolladores.rs  mod.rs  proyectos.rs  tareas.rs
src/repository/: asignaciones_repository.rs  clientes_corp_repository.rs  desarrolladores_repository.rs  mod.rs  proyectos_repository.rs  tareas_repository.rs
src/service/: asignaciones_service.rs  clientes_corp_service.rs  desarrolladores_service.rs  mod.rs  proyectos_service.rs  tareas_service.rs
